[package]
name = "reth_bsc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "reth_bsc"
path = "src/lib.rs"

[[bin]]
name = "reth-bsc"
path = "src/main.rs"

[dependencies]
reth = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-cli = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-cli-commands = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-basic-payload-builder = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-db = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-engine-local = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-chainspec = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-cli-util = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-discv4 = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4", features = ["test-utils"] }
reth-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-ethereum-forks = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4", features = ["serde"] }
reth-ethereum-payload-builder = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-ethereum-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-eth-wire = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-eth-wire-types = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-evm = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-evm-ethereum = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-node-core = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-revm = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-network = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4", features = ["test-utils"] }
reth-network-p2p = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-network-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-node-ethereum = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4", features = ["test-utils"] }
reth-network-peers = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-payload-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-ethereum-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-primitives-traits = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-provider = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4", features = ["test-utils"] }
reth-rpc-eth-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-rpc-engine-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-tracing = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-trie-common = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-trie-db = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-tasks = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
reth-transaction-pool = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.4" }
revm = "29.0.0"

# alloy dependencies
alloy-evm = "0.20.1"

alloy-genesis = "1.0.30"
alloy-consensus = "1.0.30"
alloy-eips = "1.0.30"
alloy-network = "1.0.30"
alloy-rpc-types = { version = "1.0.30", features = ["engine"] }
alloy-rpc-types-eth = "1.0.30"
alloy-rpc-types-engine = "1.0.30"
alloy-rpc-types-mev = "1.0.30"
alloy-signer = "1.0.30"

alloy-chains = "0.2.5"
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }

alloy-dyn-abi = "1.3.0"
alloy-json-abi = { version = "1.3.0", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-sol-macro = "1.3.0"
alloy-sol-types = { version = "1.3.0", default-features = false }

jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
jsonrpsee-core = { version = "0.26.0", features = ["server"] }
jsonrpsee-types = "0.26.0"

# misc dependencies
auto_impl = "1"
async-trait = "0.1"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
cfg-if = { version = "1.0", default-features = false }
derive_more = "0.99"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
lru = "0.12"
phf = { version = "0.11", features = ["macros"] }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
parity-bytes = { version = "0.1.2", default-features = false }
parking_lot = "0.12"
secp256k1 = { version = "0.30", features = ["global-context", "std", "recovery"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_cbor = "0.11"
schnellru = "0.2"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
bit-set = "0.5.3"
rand = "0.9"
zeroize = "1"
# For EIP-2335 BLS keystore support
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
pbkdf2 = "0.12"
scrypt = "0.11"

# precompiles deps
bls_on_arkworks = "0.3.0"
blst = "0.3.15"

cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client-verifier = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-proto = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }

prost = { version = "0.12.6" }

tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", rev = "8c21ccbd58a174e07eed2c9343e63ccd00f0fbd5", features = ["secp256k1"] }
signature = "2.2.0"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
eth-keystore = "0.5"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
dev = [
    "reth-cli-commands/arbitrary",
    "reth/dev",
    "revm/dev",
]

asm-keccak = [
    "reth-node-core/asm-keccak",
    "reth-primitives/asm-keccak",
    "reth-node-ethereum/asm-keccak",
]

serde = [
    "alloy-chains/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
    "bytes/serde",
    "parking_lot/serde",
    "reth-eth-wire/serde",
    "reth-eth-wire-types/serde",
    "reth-ethereum-forks/serde",
    "reth-ethereum-primitives/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-primitives-traits/serde",
    "reth-revm/serde",
    "reth-trie-common/serde",
    "reth-trie-db/serde",
    "revm/serde",
    "secp256k1/serde",
]

client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "reth-rpc-eth-api/client",
]

bench-test = []

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
